--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="utf-8">
-    <title>Rust Serialization Benchmark</title>
-    <meta property="og:type" content="website">
-    <script type="module">import init from '/rust_serialization_benchmark/pages.js';init('/rust_serialization_benchmark/pages_bg.wasm');</script>
+<!doctype html><html lang=en><meta charset=utf-8><title>Rust Serialization Benchmark</title><meta content=website property=og:type><script type=module>
+import init, * as bindings from '/rust_serialization_benchmark/pages.js';
+init('/rust_serialization_benchmark/pages_bg.wasm');
+window.wasmBindings = bindings;
 
-<link rel="preload" href="/rust_serialization_benchmark/pages_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/rust_serialization_benchmark/pages.js"></head>
-<body style="background-color: #2c3e50;">
-
-
-
-</body></html>
+</script><link as=fetch crossorigin href=/rust_serialization_benchmark/pages_bg.wasm integrity=sha384-8q5Jo3CVLE1mfdewNChAG5frPSc3OZLk3HClCvY4Wa6aRueGDpcRkwcCnLjOSl9- rel=preload type=application/wasm><link crossorigin href=/rust_serialization_benchmark/pages.js integrity=sha384-equhvatmr-Wby_uBXSRNBSXhA99dkfUR0NNOeuKjDizQt1A6b1UnMBme6rtiCgfB rel=modulepreload></head><body style=background:#2c3e50></body></html>
