deploy: 2a8527e2cd4709eb22fa2e453e251cc71687af56

--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<!doctype html><html lang=en><meta charset=utf-8><title>Rust Serialization Benchmark</title><meta content=website property=og:type><script type=module>
-import init, * as bindings from '/rust_serialization_benchmark/pages.js';
-init('/rust_serialization_benchmark/pages_bg.wasm');
-window.wasmBindings = bindings;
-
-</script><link as=fetch crossorigin href=/rust_serialization_benchmark/pages_bg.wasm integrity=sha384-8q5Jo3CVLE1mfdewNChAG5frPSc3OZLk3HClCvY4Wa6aRueGDpcRkwcCnLjOSl9- rel=preload type=application/wasm><link crossorigin href=/rust_serialization_benchmark/pages.js integrity=sha384-equhvatmr-Wby_uBXSRNBSXhA99dkfUR0NNOeuKjDizQt1A6b1UnMBme6rtiCgfB rel=modulepreload></head><body style=background:#2c3e50></body></html>
+<!doctype html><html lang=en><meta charset=utf-8><title>Rust Serialization Benchmark</title><meta content=website property=og:type><script type=module>import a,*as b from"/rust_serialization_benchmark/pages.js";a(`/rust_serialization_benchmark/pages_bg.wasm`);window.wasmBindings=b</script><link as=fetch crossorigin href=/rust_serialization_benchmark/pages_bg.wasm integrity=sha384-4BdrSPJ2ctsAfl_gM3kGAYkmsoF120qd_yWy9CPlCj5gRUaLUBabr3VB3Bbq2Vxm rel=preload type=application/wasm><link crossorigin href=/rust_serialization_benchmark/pages.js integrity=sha384-7Q_1B5ujuQZd9q9kP0EiBVEfqfBibRIjtoWP9fe7wcbFdjzSLp6lXQw4ba8etwd4 rel=modulepreload></head><body style=background-color:#2c3e50></body></html>
