--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!doctype html><html lang=en><meta charset=utf-8><title>Rust Serialization Benchmark</title><meta content=website property=og:type><script type=module>import a,*as b from"/rust_serialization_benchmark/pages.js";a(`/rust_serialization_benchmark/pages_bg.wasm`);window.wasmBindings=b</script><link crossorigin href=/rust_serialization_benchmark/pages.js integrity=sha384-GA5+CknUZAFvv0TkpE0+P9z6TcVM8K/pVk2As/Ys0Rvv7WIraVDc2GocXjSuPnh8 rel=modulepreload><link as=fetch crossorigin href=/rust_serialization_benchmark/pages_bg.wasm integrity=sha384-1zxzW+ysURkMnz6JVG9lX3SN7/SFIGSD44q7//Poib3rghNpbAgpjqUiB1FRx4Go rel=preload type=application/wasm></head><body style=background-color:#2c3e50></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Rust Serialization Benchmark</title>
+    <meta property="og:type" content="website"/>
+    
+<script type="module" nonce="kERjgE9zuGjJF6IcOsduMg==">
+import init, * as bindings from '/rust_serialization_benchmark/pages.js';
+const wasm = await init('/rust_serialization_benchmark/pages_bg.wasm');
+
+
+window.wasmBindings = bindings;
+
+
+dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
+
+</script>
+
+<link rel="modulepreload" href="/rust_serialization_benchmark/pages.js" crossorigin=anonymous integrity="sha384-Liax3+zMgj+eG9HcozAqIUyUHdWSx9wCwH64b/MLm0fb4/7NDwvSl+CoKhqiBM+5">
+<link rel="preload" href="/rust_serialization_benchmark/pages_bg.wasm" crossorigin=anonymous integrity="sha384-S0qL+53Brj5/olIK/HCxEb3IvqLcllYmPG84zOMdoPXZZU9tUomlF/HTDXPhdJPD" as="fetch" type="application/wasm"></head>
+<body style="background-color: #2c3e50;">
+
+</body>
+</html>
